        Added some anti-robot tags to certain pages.
        Fixed bug in install procedure - blank script_name should now get
          installed as index.cgi
        Added option of munging in custom lib paths on install.
        Added option of custom templates for footer, license warning
          on edit form, banner at top of page (see CUSTOMISATION file
          for details).

0.40    18 September 2004
        Recent Changes now shows changes in the past 24 hours, past week,
          past fortnight, and past 30 days.
        New preferences option to allow Recent Changes visit tracking.
        Preferences now has an option for when your prefs expire.
        Navbar added to diff and history pages.
        The "omit help links" preference now actually works.
        Set some pages to non-editable and non-deletable that should have been.
        Recent Changes RSS fixed so "wiki:importance" is set correctly.
        New "ignore_minor_edits" option for Recent Changes RSS.
        Added RSS feeds for contributors, locales and categories.

0.39    15 September 2004
        Split commit_node out into OpenGuides.pm in preparation for spam filter
        Added option of using Plucene for searching.  If you want to do this
          (and it is recommended over the default of Search::InvertedIndex)
          you will need to do two things:
            - either delete your old indexes (they're just files in the index
              directory) or use a different index directory
            - reindex your entire wiki (see reindex.pl in the examples/
              directory of this distribution)

0.38    26 July 2004
        Major improvements to the search result ordering (thanks to
          Steve Jolly, Bob Walker and Billy Abbott for test cases).

0.37    23 July 2004
        Fixed bug in diff view - the versions are the right way round now...
          Fixed bug with links in historic view.  Require CGI.pm 2.92 to
          avoid escapeHTML bug.
