@@ -232,7 +232,7 @@ my $build = OpenGuides::Build->new(
 	'CGI::Carp'                       => 0,
 	'CGI::Cookie'                     => 0,
 	'CGI::Wiki'                       => '0.54',
-	'CGI::Wiki::Formatter::UseMod'    => '0.09',
+	'CGI::Wiki::Formatter::UseMod'    => '0.16', # macros
         'CGI::Wiki::Plugin::Categoriser'  => 0,
 	'CGI::Wiki::Plugin::Diff'         => '0.07', # earlier buggy
 	'CGI::Wiki::Plugin::GeoCache'     => 0,
