@@ -7,6 +7,7 @@
         Added option of custom templates for footer, license warning
           on edit form, banner at top of page (see CUSTOMISATION file
           for details).
+        Added new macro - used as eg @INDEX_LIST [[Locale Fulham]]
 
 0.40    18 September 2004
         Recent Changes now shows changes in the past 24 hours, past week,
